--- a/Application/Home/View/blue/Qiniu/form.html
+++ b/Application/Home/View/blue/Qiniu/form.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <!--http://upload.qiniu.com/-->
-    <form method="post" action="http://localhost/PersonalGarden/index.php/Home/Qiniu/upload" enctype="multipart/form-data">
+    <form method="post" action="http://localhost:8080/PersonalGarden/index.php/Home/Qiniu/upload" enctype="multipart/form-data">
         <input name="token" type="hidden" value="<upload_token>">
         <input name="myfile" type="file" />
         <input type="submit" value="上传"/>
